# pdf-shape

./: Cargo.toml  LICENSE  README.md
examples/: main.rs
examples/xml_sample/: sample_1.xml  sample_2.xml
src/: lib.rs  traits.rs
src/raw_document/: mod.rs
