[package]
name = "pdf-shape"
version = "0.1.0"
authors = ["Mathis EON <eon@abes.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = {version = "0.19.0", features = ["serialize"]}
serde = {version="1.0.116", features=["derive"]}
indextree = "4.3.1"
streaming-stats = "0.2"

[lib]
name="pdf_shape"
path="./src/lib.rs"
